tests/rosetta/out/Java/24-game.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/24-game.mochi:51:31: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/24-game.mochi:51:31

 51 |       var b = stack[len(stack)-1]
    |                               ^

help:
  Parse error occurred. Check syntax near this location.